a6.7.3