@@ -1,11 +1,11 @@
 package mara.mybox.data;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 import mara.mybox.dev.MyBoxLog;
 import mara.mybox.tools.FileNameTools;
-import mara.mybox.tools.FileTools;
 
 import mara.mybox.tools.UrlTools;
 
@@ -94,7 +94,7 @@ public class Link {
     public URL getUrl() {
         if (url == null && address != null) {
             try {
-                url = new URL(address);
+                url = new URI(address).toURL();
             } catch (Exception e) {
             }
         }
